--- a/aws-infrastructure/terraform/wrapper.properties
+++ b/aws-infrastructure/terraform/wrapper.properties
@@ -1,4 +1,4 @@
 # default, overridable by env var
 # Path to credentials file
 SHARED_CREDENTIALS_FILE=${AWS_SHARED_CREDENTIALS_FILE:="${HOME}/.aws/credentials"}
-UNIQUE_BUCKET_STRING=<<BUCKET_NAME>>
+UNIQUE_BUCKET_STRING=mmfargate190924
