part of application.yml was commented

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -20,12 +20,12 @@ management:
       exposure:
         include: [ "prometheus", "health" ]
 
-aws:
-  region: eu-central-1
-  dynamodb:
-    endpoint: http://localhost:8000
-    accessKey: dummyAccess
-    secretKey: dummySecret
+# aws:
+#  region: eu-central-1
+#  dynamodb:
+#    endpoint: http://localhost:8000
+#    accessKey: dummyAccess
+#    secretKey: dummySecret
 #
 #notification:
 #  topicarn: dummy
